[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.11"
iptables = "0.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_yaml = "0.8.21"
time = "0.3.2"
tokio = "1.10.0"
