[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
hyper = "0.14.11"
iptables = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_yaml = "0.8.21"
simplelog = "0.10.2"
time = "0.3.2"
tokio = "1.10.0"
